Fix XR related clang warnings in WPE https://bugs.webkit.org/show_bug.cgi?id=228779

Reviewed by Sam Weinig.

Fix a few compiler warnings.

Source/WebCore:

* platform/xr/openxr/OpenXRInputSource.cpp:
(PlatformXR::OpenXRInputSource::getButton const):
* platform/xr/openxr/OpenXRSwapchain.cpp:
(PlatformXR::OpenXRSwapchain::create):
(PlatformXR::OpenXRSwapchain::OpenXRSwapchain):
(PlatformXR::OpenXRSwapchain::acquireImage):
* platform/xr/openxr/OpenXRSwapchain.h:

Source/WebKit:

* Shared/XR/XRDeviceProxy.cpp:
(WebKit::XRDeviceProxy::views const):


Canonical link: https://commits.webkit.org/240283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280681 268f45cc-cd09-0410-ab3c-d52691b4dbfc